--- a/nr592/schedule_spring2019.Rmd
+++ b/nr592/schedule_spring2019.Rmd
@@ -311,3 +311,6 @@ output:
 ## Week 8: Project presentations
 
 Meeting date and time TBD
+
+
+<div class="tocify-extend-page" data-unique="tocify-extend-page" style="height: 0;"></div>
