--- a/nr592/syllabus_spring2019.Rmd
+++ b/nr592/syllabus_spring2019.Rmd
@@ -260,6 +260,14 @@ _Adapted from [Land Acknowledgment at CSU](https://president.colostate.edu/speec
 
 <br>
 
+<center>
+
+<a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Material for this course is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
+
+</center>
+
+<br>
+
 
 ([pdf](./syllabus_spring2019.pdf) / [Rmd](./syllabus_spring2019.Rmd))
 
