--- a/nr592/index.Rmd
+++ b/nr592/index.Rmd
@@ -9,7 +9,7 @@ author: |
 date: |
   | Spring 2019
   | &nbsp;
-  | Last Updated: 2019-02-21
+  | Last Updated: 2019-02-22
   | &nbsp;
 output:
   html_document:
@@ -76,7 +76,7 @@ In this course, you will learn how to program using the R statistical environmen
 ## Course Materials
 
 **Prerequisites**  
-This course is open to graduate students only. There are no prerequisites, but it is expected that  students have had some exposure to statistics.
+This course is open to graduate students only. There are no prerequisite courses, but it is expected that students have had some exposure to statistics.
 
 **Time Commitment**  
 The work load of this course is equivalent to a full semester 1-credit course, squeezed into half a semester of time. That means we will meet for 2 hours per week and you should expect to spend an average of 4 to 6 hours of time per week outside of class to accomplish class readings and assignments (per the [CSU Catalog](http://catalog.colostate.edu/general-catalog/academic-standards/academic-credit/)).
@@ -148,7 +148,7 @@ Lecture notes will be made available by the end of the day of class. They will n
 
 Required reading should be done by the second class meeting (Thursday) of the week in which it is listed.
 
-Weekly homework assignments are due by the first class meeting (Tuesday) following the week in which they are listed. Due dates for each assignment are listed on the [Course Schedule](./schedule_spring2019.html).
+Weekly homework assignments are due by the beginning of the first class meeting (Tuesday at 10:00am) following the week in which they are listed. Due dates for each assignment are listed on the [Course Schedule](./schedule_spring2019.html).
 
 All assignments, the project proposal, and the project report should be submitted through [Canvas](https://colostate.instructure.com/courses/83430/assignments). Assignment submissions should include your R script (\*.R) or R Markdown (\*.Rmd) file, as well as any other files specified in the assignment.
 
@@ -175,10 +175,10 @@ kable_styling(kable(data.frame("Assignment"=c("Homework Assignments (x6)",
                                                "10%",
                                                "30%",
                                                "5%"),
-                 "Due Date"=c(paste0("Weekly (see ",
+                 "Due Date"=c(paste0("Weekly, 10:00am (see ",
                                      "[", "Course Schedule", "](",
                                      "/schedule_spring2019.html", ")", ")"),
-                              "April 23",
+                              "April 23, 11:59pm",
                               "Week of May 13",
                               "May 17, 11:59pm",
                               "Ongoing")),
@@ -260,13 +260,15 @@ _Adapted from [Land Acknowledgment at CSU](https://president.colostate.edu/speec
 
 <br>
 
+
 <center>
 
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Material for this course is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
 
 </center>
 
-<br>
+
+<br><br>
 
 
 ([pdf](./syllabus_spring2019.pdf) / [Rmd](./syllabus_spring2019.Rmd))
