--- a/nr592/schedule_spring2019.Rmd
+++ b/nr592/schedule_spring2019.Rmd
@@ -9,7 +9,7 @@ author: |
 date: |
   | Spring 2019
   | &nbsp;
-  | Last Updated: 2019-02-21
+  | Last Updated: 2019-02-22
   | &nbsp;
 output:
   html_document:
@@ -162,7 +162,7 @@ output:
     
 1. **Assignment 3** (Due April 16)
 
-1. Start thinking about **Project Proposal** (Due April 23)
+1. Start thinking about **Project Proposal** (Due April 23, 11:59pm)
 
 ### Resources
 
@@ -214,7 +214,7 @@ output:
 
 1. **Assignment 4** (Due April 23)
 
-1. **Project Proposal** (Due April 23)
+1. **Project Proposal** (Due April 23, 11:59pm)
 
 ### Resources
 
@@ -327,7 +327,7 @@ output:
 Meeting date and time TBD
 
 
-<br>
+<br><br>
 
 
 ([pdf](./schedule_spring2019.pdf) / [Rmd](./schedule_spring2019.Rmd))
