--- a/nr592/lectures/lecture03.Rmd
+++ b/nr592/lectures/lecture03.Rmd
@@ -25,3 +25,8 @@ output:
 ## What is EDA?
 
 ### EDA is NOT "fishing," "data dredging," or "p-hacking"
+
+
+## Descriptive statistics
+
+### Confidence intervals
